# gcmotion

./: .gitignore  Collection.ipynb  Notebook.ipynb  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: documentation.yaml
docs/: Makefile  conf.py  index.rst
docs/pages/: API.rst  Installing.rst  about_objects.rst  about_qfactor.rst  api.rst  bfields.rst  installation.rst  module_qfactor.rst  qfactor.rst  qfactors.rst
docs/pages/particle_classes/: collection.rst  general.rst  particle.rst
docs/pages/plotters/: collection_drift.rst  collection_energy_contour.rst  collection_general.rst  drift.rst  drifts.rst  electric_profile.rst  energy_contour.rst  general.rst  magnetic_profile.rst  parabolas.rst  poloidal_cut.rst  qfactor_profile.rst  time_evolution.rst  tokamak_profile.rst  torus2d.rst  torus3d.rst
docs/pages/scripts/: animate.rst  events.rst  general.rst  orbit.rst
docs/pages/tokamak/: bfields.rst  efields.rst  general.rst  module_bfield.rst  module_efield.rst  module_qfactor.rst  qfactors.rst
docs/pages/user_guide/: collection.rst  general.rst  particle_creation.rst  plotting.rst
docs/pages/utils/: general.rst
docs/source/: conf.py  index.rst  installation.rst
docs/source/reference/: _base_classes.rst  bfield.rst  efield.rst  entities.rst  events.rst  index.rst  initializers.rst  main_namespace.rst  qfactor.rst  quantity.rst  tokamak.rst
examples/: divertor_negative.py  dtt_negative.py  guide_collection_example.py  guide_example.ipynb  guide_example.py  parameters.py  particle.py  profile.py  smart_negative.py  smart_positive.py  wiki_example.ipynb  wiki_example.py
examples/radial_paper/: radial_paper.ipynb  radial_paper.py  radial_paper_parameters.py
examples/user_guide/: collection_example.py  guide_collection.ipynb  guide_collection.py  guide_parameters.py  guide_particle.ipynb  guide_particle.py  guide_profile.py  parameters.py
gcmotion/: __init__.py  __init__.py.orig  freq.py  particle.py
gcmotion/classes/: collection.py  parabolas.py  particle.py
gcmotion/configuration/: fixed_points_bifurcation_parameters.py  parabolas_parameters.py  particle_attributes.py  physical_constants.py  plot_parameters.py  scripts_configuration.py  solver_configuration.py
gcmotion/entities/: __init__.py  collection.py  initial_conditions.py  particle.py  physical_parameters.py  profile.py  profile_iterators.py  tokamak.py
gcmotion/pint/: pint_setup.py
gcmotion/plot/: RZ_big_contour.py  RZ_contour.py  RZ_contours.py  RZ_flux_contour.py  RZ_plot.py  __init__.py  base_profile.py  bifurcation_plot.py  collection_drift.py  collection_drifts.py  collection_poloidal_cut.py  colorbar.py  drifts.py  efiled_profile.py  fixed_points_profile_contour.py  magnetic_profile.py  parabolas.py  parabolas_plot.py  particle_evolution.py  particle_poloidal_drift.py  profile_contour.py  qfactor_profile.py  resonances_range_plot.py
gcmotion/plot/_base/: _base_RZ_contour.py  _base_calc_parabolas.py  _base_contour_colorbar.py  _base_fixed_points_profile_contour.py  _base_parabolas_tpb_plot.py  _base_particle_poloidal_drift.py  _base_profile_Energy_contour.py  _base_profile_Pzeta_contour.py  _base_profile_contour.py  _base_profile_energy_contour.py  _base_profile_mu_contour.py  _base_profile_pzeta_contour.py  _config.py
gcmotion/plot/base/: base_profile_contour.py
gcmotion/plotters/: __init__.py  _tools.py  bifurcation_plot.py  bifurcation_plot_Pzeta.py  bifurcation_plot_mu.py  collection_drift.py  collection_drifts.py  collection_energy_contour.py  collection_parabolas.py  collection_poloidal_cut.py  drift.py  drifts.py  electric_profile.py  energy_contour.py  fixed_points_plot.py  magnetic_profile.py  parabolas.py  parabolas_plot.py  plots.py  poloidal_cut.py  profile_contour.py  qfactor_profile.py  time_evolution.py  tokamak_profile.py  torus2d.py  torus3d.py
gcmotion/plotters/_bif_base/: _P_thetas_bif_plot.py  _base_ndfp_bif_plot.py  _ndfp_bif_plot.py  _thetas_bif_plot.py  (+1 more)
gcmotion/scripts/: XO_points_classification.py  animation.py  bifurcation.py  bifurcation_Pzeta.py  contour_freq.py  events.py  fixed_points.py  fp_ic_scan.py  freq.image.py  freq.py  frequency_analysis.old.py  frequency_analysis.py  graphic_frequencies.py  objects.py  orbit.py  parabolas.py  resοnance_range.py  test_shoelace.py
gcmotion/tokamak/: bfield.py  efield.py  qfactor.py
gcmotion/utils/: XO_points_classification.py  _logger_setup.py  bif_values_setup.py  calcWNU_grid.py  canonical_to_toroidal.py  decorators.py  distinctify.py  energy_Ptheta.py  fp_ic_scan.py  fp_system.py  get_size.py  hessian.py  logger_setup.py  pi_mod.py  plot_utils.py  points_psi_to_P_theta.py  pprint_dict.py  precompute.py  quantity_constructor.py  second_derivative.py  setup_pint.py  single_fixed_point.py  yspan.py
tests/: conftest.py  pytest.ini  test_bfield.py  test_docstrings.py  test_efield.py  test_events.py  test_numerical.py  test_particle.py  test_particle_attrs_units.py  test_profile.py  test_qfactor.py  test_reference.py
tests/benchmarks/: qfactors.py  test_bbox_benchmark.py  test_precomputed_hypergeometric.py  test_profile_findNU.py  test_shoelace_benchmark.py
tests/misc/: test_shoelace.py
tests/reference/: test_docstrings.py  test_reference.py
tests/test_entities/: test_initial_conditions.py  test_particle.py  test_physical_parameters.py  test_profile.py  test_tokamak.py
tests/test_plot_utils/: test_format_which.py
tests/test_scripts/: conftest.py  test_events.py
tests/test_tokamak/: conftest.py  test_bfield.py  test_bfields.py  test_efield.py  test_efields.py  test_initializers.py  test_precomputed.py  test_qfactor.py  test_qfactors.py
usr/: qkinetic.py  testing.ipynb  units derivation.md
(+46 files in other folders)
