[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "GCMotion"
version = "0.0.1"   # Also update version at docs:conf.py
authors = [
  { name="George Tsiamasiotis", email="gtsiamasiotis@gmail.com" },
]
description = "Package for Guiding Center Motion calculations"
keywords = [
  "plasma", 
  "physics", 
  "analytical mechanics", 
  "Hamiltonian mechanics"
]
readme = "README.rst"
licence = "GPL-3.0-or-later"
licence-files = "LICENCE.txt"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pyqt6",
  "loguru",
  "pint",
  "termcolor",
  "xarray",
  "netcdf4",
]


[project.optional-dependencies]
test = [
  "pytest",
]
docs = [
  "Sphinx",
  "numpydoc",
  "pydata-sphinx-theme",
]


[tool.black]
line-length = 79


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --doctest-modules --durations 3"
console_output_style = "progress-even-when-capture-no"
filterwarnings = [
  "ignore::DeprecationWarning:jupyter_client.*",
]


classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/PlasmaPhy/gcmotion"
Issues = "https://github.com/PlasmaPhy/gcmotion/issues"
Documentation = "https://plasmaphy.github.io/gcmotion/"
