[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "GCMotion"
version = "0.0.1"   # Also update version at docs:conf.py
authors = [
  { name="George Tsiamasiotis", email="gtsiamasiotis@gmail.com" },
]
description = "Package for Guiding Center Motion calculations"
keywords = [
  "plasma", 
  "physics", 
  "analytical mechanics", 
  "Hamiltonian mechanics"
]
readme = "README.rst"
licence = "GPL-3.0-or-later"
licence-files = "LICENCE.txt"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]

requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "loguru",
  "pint",
  "termcolor",
  "xarray",
  "netcdf4",
  "tqdm",
  "pyqt6", # Default matplotlib backend, causes annoying warnings in wayland
  #but works
  # "pygobject", # Needed for matplotlib's gtk3agg backend, but requires
  # compiling
]


[project.optional-dependencies]
test = [
  "pytest",
]
test-all = [
  "gcmotion[test]",
  "pytest-cov",
]
docs = [
  "Sphinx",
  "numpydoc",
  "pydata-sphinx-theme",
]




[tool.black]
line-length = 79


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --doctest-modules --durations 3 --import-mode=importlib"
console_output_style = "progress-even-when-capture-no"
filterwarnings = [
  "ignore::DeprecationWarning:jupyter_client.*",
]


[project.urls]
Homepage = "https://github.com/PlasmaPhy/gcmotion"
Issues = "https://github.com/PlasmaPhy/gcmotion/issues"
Documentation = "https://plasmaphy.github.io/gcmotion/"
