[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "GCMotion"
version = "0.0.1"   # Also update version at docs:conf.py
authors = [
  { name="George Tsiamasiotis", email="gtsiamasiotis@gmail.com" },
]
description = "Package for Guiding Center Motion calculations"
keywords = [
  "plasma",
  "physics",
  "analytical mechanics",
  "Hamiltonian mechanics"
]
readme = "README.rst"
licence = "GPL-3.0-or-later"
licence-files = "LICENCE.txt"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]

requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "loguru",
  "pint",
  "termcolor",
  "xarray",
  "netcdf4",
  "tqdm",
  "pyqt6", # Default matplotlib backend, causes annoying warnings in wayland
  #but works
  # "pygobject", # Needed for matplotlib's gtk3agg backend, but requires
  # compiling
]


[project.optional-dependencies]
test = [
  "pytest",
  "pytest-benchmark",
]
test-all = [
  "gcmotion[test]",
  "pytest-cov",
  "pytest-random-order",
  "pytest-reverse",
]
docs = [
  "Sphinx",
  "numpydoc",
  "pydata-sphinx-theme",
]




[tool.black]
line-length = 79


[tool.pytest.ini_options]
testpaths = "tests"
addopts = """
--durations 3
--doctest-modules
--benchmark-skip
--import-mode=importlib
--benchmark-name=short
"""
console_output_style = "progress-even-when-capture-no"
filterwarnings = [
  "ignore::DeprecationWarning:jupyter_client.*",
]


[project.urls]
Homepage = "https://github.com/PlasmaPhy/gcmotion"
Issues = "https://github.com/PlasmaPhy/gcmotion/issues"
Documentation = "https://plasmaphy.github.io/gcmotion/"

# U2FsdGVkX1/bMVdPSKQ6YUP8rVMA3fHifjdVxGbvMFFeaJp9pzzW6YPYTzDaIeOi
# e3gEiFseNABMpPpntDoOSfxykQVi+NoCBCABrNpjXjfkSwlKl5BU2OkD/2DwuS6J
# PKigNskj9iEEPNtfReH0nEXKHO2j3s+FO2rRhyECWsI=
